refactor: Collectors 사용에서 .toList()만 사용하도록 변경